# ngincc

./: .gitignore  COPYING  Makefile.am  README.md  configure.ac
apps/: Makefile.am
apps/chat/: Makefile.am
apps/chat/inc/: chat_subsystem.hxx
apps/chat/inc/chat/: broadcast_room.hxx  chat_connection.hxx  chat_connection_state.hxx  chat_factory.hxx  chat_server_stack.hxx  chat_user.h  help.hxx  join_room.hxx  quit.hxx  room_list.hxx  room_list_master.hxx
apps/chat/src/: broadcast_room.cc  chat_connection.cc  chat_factory.cc  chat_server_stack.cc  chat_subsystem.cc  chat_user.cc  connection_state_connected.cc  connection_state_in_room.cc  connection_state_logged_in.cc  connection_state_quitting.cc  help.cc  join_room.cc  main.cc  quit.cc  room_list.cc  room_list_master.cc
apps/http/: Makefile.am
apps/http/inc/: http.hxx_unused  http_subsystem.hxx
apps/http/inc/http/: http_connection.hxx  http_server_stack.hxx
apps/http/src/: http_connection.cc  http_server_stack.cc  http_subsystem.cc  main.cc
apps/load_balancer/: Makefile.am
apps/load_balancer/inc/: load_balancer.hxx
apps/load_balancer/src/: load_balancer.cc
base/: Makefile.am  libngincc_base.pc.in  parallel.md
base/inc/: base_subsystem.hxx  binary_coder.hxx  binary_coder_internal.hxx  db.hxx  event_loop.hxx  lazy_worker.hxx  log.hxx  module.hxx  ngincc_config.h  plugin_manager.hxx  worker.hxx
base/inc/parallel/: pipeline.hxx
base/inc/shake/: enumerate_internal.hxx  help_internal.hxx  quitall_internal.hxx  shake_intrprtr.hxx  test_internal.hxx
base/src/: base_subsystem.cc  binary_coder.cc  event_loop_poll.cc  lazy_worker.cc  main.cc  plugin_manager.cc  worker.cc
base/src/parallel/: async_request.cc  fork.cc  ping.cc  pipeline.cc
base/src/shake/: enumerate.cc  help.cc  quitall.cc  shake_intrprtr.cc  test.cc
db/: Makefile.am
db/inc/: async_db.hxx  async_db_master.hxx
db/src/: async_db.cc  async_db_master.cc
net/: Makefile.am
net/inc/: net_channel.hxx  net_subsystem.hxx  raw_pipeline.hxx  server_stack.hxx  tcp_listener_internal.hxx  tcp_listener_server.hxx
net/src/: default_net_channel.cc  main.cc  net_channel.cc  net_subsystem.cc  raw_pipeline.cc  server_stack.cc  tcp_listener_server.cc
